--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "typescript": "*"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
